Update on Overleaf.

--- a/00-abstract.tex
+++ b/00-abstract.tex
@@ -1,11 +1,26 @@
 \chapter{Abstract}
 
-Lorem ipsum
+
+Nowadays, nearly every medium-size or large company in the electronics, pharmaceutics, food, or other industries needs to support its operations by managing the exchanged information and resources. The upstream and downstream flow of these, together with the system of organizations, people and activities that make it possible, is commonly referred to as a supply chain. In a practical sense, a supply chain’s flow of products and services goes from supplier to consumer. For example, the supermarket fish a person eats: it is caught in boats, then prepared, and distributed to a store where the final consumer is able to buy it. But supply chains are becoming very complicated and complex systems, spanning multiple businesses and relationships, interlaced in many different ways, which is a reason why supply chain management (SCM), the discipline which deals with the coordination of a supply chain, is becoming increasingly more important.  The information has to flow through the chain, sometimes even reverting the direction, but the paths it takes are not always very obvious or even traceable in the global context, dealing with many issues along the way.
+
+Managing inventory and suppliers while maintaining safety, quality and keeping to the schedule is a difficult task. Delays are common, and a company’s finances, growth and reputation are affected. This is further aggravated by the fact that information is not always accurate or available when needed. And the fact that companies value their privacy makes it so that sharing information with others is not always simple or desirable. 
+
+Most important of all, frequently, there are big holes of information in a supply chain, analog gaps where the information has not been made digital in the system. The use of traditional tools is still too prevalent. Emails are sent, documents are printed and mailed, instead of making the information digital, putting  it directly on the network and relaying it to the next link in the chain. This fact, together with the sometimes apparent lack of interoperability between the SCM software of different companies and their need to protect their private information is what makes a global overview of the whole chain complicated with the current technologies. Provenance and traceability of a supply chain are a big objective for companies, along with improving security, efficiency and effectiveness of the supply chains.
+
+Most of these issues are, in great part, caused by the standalone use of outdated or inadequate software architectures, which, traditionally, are often centralized and have single points of failure. And even when they are not, oftentimes they are insecure, prone to synchronization problems, leading to big delays in both relaying the information and resources and making payments possible. 
+
+One way to approach these specific problems of supply chains that are brought by the traditional IT solutions is to update them with new infrastructures, namely by using blockchain technology. Blockchain is a decentralized technology that has no single point of failure and allows for the immutable storage of verifiable data all over the computers that store it. Each time there is a new piece of information, its validity is verified by the network and it is inserted into a block of the chain, which leads it to being continually extended. This means that we can check all the information that there ever was, since the beginning, and validate it easily, or make any necessary calculations. As such, blockchains are the perfect means to achieve traceability of a supply chain. At the same time they are a secure and incorruptible way to store information, with a fast synchronization time, being perpetually available to anyone, anywhere within the network. It would also be the way to close the analog gaps, turning the chain fully digital, leading to the possibility of a global overview.
+
+This project focuses on researching the effects of applying blockchain technology to a supply chain and its management. By doing this, it should be possible to ascertain how much this technology can really impact SCM over the traditional IT solutions, or in combination with them. A practical instance involving the application of this technology to a system will also be developed, to further demonstrate its possible benefits.
+
+The improvements that it could bring are, however, not limited to the problems described. Blockchain is a whole new game, and it brings a whole new myriad of possibilities into the table. We are only seeing the tip of the iceberg and this is an area that is of the interest of any company which aims to improve the efficiency and effectiveness of its entire supply chain system.
+
+\textbf{Keywords:} Supply Chain, Supply Chain Management, Industry, Blockchain, Network, Decentralization, Security, Traceability, Provenance, Information Integration, Ledger, Interoperability
 
 
 \chapter{Resumo}
 
-Lorem ipsum
+Tradução PT do abstract
 
 
 
