--- a/thesis.tex
+++ b/thesis.tex
@@ -86,8 +86,8 @@
 
 
 \begin{document}
-	\title{Thesis title}
-	\author{\href{mailto:your-email-address@fe.up.pt}{Your Full Name}}
+	\title{TESThesis }
+	\author{\href{mailto:your-email-address@fe.up.pt}{Pedro Miguel Lourenço Costa}}
 
 	\frontmatter
 	    \pagestyle{empty}
@@ -119,7 +119,10 @@
 
 	% final lineup
 	\include{introduction}
-	%\include{state-of-the-art-review}
+	\include{supplychainproblems}
+    \include{blockchain}
+    \include{blockchainframeworks}
+    \include{blockchainapplicability}
 	%\include{problem}
 	%\include{contribution1}
 	%\include{contribution2}
