--- a/introduction.tex
+++ b/introduction.tex
@@ -5,10 +5,59 @@
 
 Lorem ipsum \cite{ferreira_patterns_2008}.
 
-\section{First Section}
+%\section*{}
 
-Lorem ipsum.
+%\begin{quote}
+%  ``Like the Abstract, the Introduction should be written to engage the
+%  interest of the reader. It should also give the reader an idea of
+%  how the dissertation is structured, and in doing so, define the
+%  thread of the contents.''~\cite[chap.\ Introduction]{kn:Tha01} 
+%\end{quote}
 
-\section{Second Section}
+%Neste primeiro capítulo ilustra-se a utilização de citações e de
+%referências biblio\-grá\-fi\-cas.
+%Para além de dar um exemplo de utilização de uma citação, a citação
+%anterior, introduz uma referência que pode ser consultada, entre
+%muitas outras referências bibliográficas
+%interessantes~\cite{kn:Tha01,kn:PP05}. 
 
-Lorem ipsum.
+\section{Evolution of blockchain technologies and the complexity of Supply Chains} \label{sec:context}
+
+Blockchain is a technology that allows for secure, public, distributed and decentralized systems. Though it was first proposed in its actual form by Satoshi Nakamoto \cite{Nakamoto2008}, an anonymous group which published a white paper in 2008, this was not the first reference to such a technology. The first work on a cryptographically secured chain of blocks was described in 1991 by Stuart Haber and W. Scott Stornetta \cite{Haber1991}, and further refined in 1992 by Bayer \& Haber, by incorporating Merkle trees \cite{Bayer1992}. Since then, it has come a long way, sprouting multiple different uses and applications of the technology. Its characteristics make the development of distributed and permanently, globally available systems possible, which is a paradigm that is attracting the interest of various industries.
+
+One area in particular where we believe blockchain could bring about great improvements is Supply Chain Management (SCM). SCM has seen an increase in complexity in the last few decades, due to the increase in the globalization of the market, with businesses interlacing in many different ways, their relations extending way beyond what they used to, as seen in an article published by Filiz Isik in 2011 \cite{Isik2011}.  This increase in complexity is somewhat hard to manage and some supply chains stretch and encompass so many businesses that the software used to manage it ends up not being able to transmit all the information from end to end, leaving holes of information in between the links that join each business, thus leading to a lot of chaos and uncertainty as to the state of the key items in the chain \cite{Wilding1998}. 
+   
+   This dissertation work will focus on supply chain management, and on how blockchain can possibly be applied to improve this area, leading to positive impacts in the logistics industry and eventually finding benefits for the consumer as well. 
+
+%Esta secção descreve a área em que o trabalho se insere, podendo
+%referir um eventual projeto de que faz parte e apresentar uma breve
+%descrição da empresa onde o trabalho decorreu.
+
+%Lorem ipsum~\cite{kn:Lip08} dolor sit amet, consectetuer adipiscing
+%elit. 
+
+
+\section{Motivation} \label{sec:motivation}
+
+As described in section 1.3, these problems are caused by the use of software that can't keep up with the evolution of the supply chains. It is either outdated or inadequate software by itself, and even when the software works just fine, it wasn't specified to allow for the integration of a whole chain. There is an immediate need for better solutions. New and better solutions might not completely replace the previous ones, but, rather, add to them.
+    
+    One way to approach these specific problems that are caused by the traditional IT solutions is to update them with the use of new technologies, namely by taking what already exists and integrating it with blockchain technology. The characteristics of blockchain would allow for many of the identified problems to be reduced or neutralized. Blockchains are the perfect means to achieve traceability of a supply chain, and so, they are good to achieve provenance as well. At the same time they are a secure, incorruptible and immutable way to store information, with a fast synchronization time, being perpetually available to anyone who has permission, anywhere within the network. It would also be the way to close the analog gaps, turning the chain fully digital, leading to the possibility of a global overview.
+
+\section{Objectives}
+\label{sec:objectives}
+The main objective of this dissertation is to find whether blockchain technology can really solve the most common problems of supply chain management, and which ones would it help out the most with. There are a multitude of small tasks that blockchain could automatize in supply chain, so this thesis will try to figure out which ones blockchain applies to better. 
+
+Certain designs are going to be proposed, with focus on different issues and giving solutions to different archetypes of supply chains and integration models. As a secondary objective, we are going to find which design better fits in order to build a generalist solution to our problem and also what are the requirements for blockchain to be applied in this sense.
+
+\section{Dissertation Structure} \label{sec:struct}
+
+Para além da introdução, esta dissertação contém mais x capítulos.
+No capítulo~\ref{chap:sota}, é descrito o estado da arte e são
+apresentados trabalhos relacionados. 
+%\todoline{Complete the document structure.}
+No capítulo~\ref{chap:chap3}, ipsum dolor sit amet, consectetuer
+adipiscing elit.
+No capítulo~\ref{chap:chap4} praesent sit amet sem. 
+No capítulo~\ref{chap:concl}  posuere, ante non tristique
+consectetuer, dui elit scelerisque augue, eu vehicula nibh nisi ac
+est. 
