--- a/references.bib
+++ b/references.bib
@@ -9,3 +9,299 @@
 	month = oct,
 	year = {2008},
 },
+
+@article{Bayer1992,
+abstract = {To establish that a document was created after a given moment in time, it is necessary to report events that could not have been predicted before they happened. To establish that a document was created before a given moment in time, it is necessary to cause an event based on the document, which can be observed by others. Cryptographic hash functions can be used both to report events succinctly, and to cause events based on documents without revealing their contents. Haber and Stornetta have proposed two schemes for digital time-stamping which rely on these principles [HaSt 91]. We reexamine one of those protocols, addressing the resource constraint required for storage and verification of time-stamp certificates. By using trees, we show how to achieve an exponential increase in the publicity obtained for each time-stamping event, while reducing the storage and the computation required in order to validate a given certificate. We show how time-stamping can be used in certain circumstances to extend the useful lifetime of different kinds of cryptographic certifications of authenticity, in the event that the certifying protocol is compromised. This can be applied to digital signatures, or to time-stamping itself, making the digital time-stamping process renewable.},
+author = {Bayer, Dave and Haber, Stuart and Stornetta, W. Scott},
+doi = {10.1007/978-1-4613-9323-8_24},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/978-1-4613-9323-8{\_}24.pdf:pdf},
+isbn = {978-1-4613-9323-8},
+journal = {Sequences II},
+pages = {329--334},
+title = {{Improving the Efficiency and Reliability of Digital Time-Stamping}},
+url = {http://link.springer.com/10.1007/978-1-4613-9323-8{\_}24},
+year = {1992}
+}
+
+@article{Nakamoto2008,
+abstract = {Abstract. A purely peer-to-peer version of electronic cash would allow online payments to be sent directly from one party to another without going through a financial institution. Digital signatures provide part of the solution, but the main benefits are lost if a trusted third party is still required to prevent double-spending. We propose a solution to the double-spending problem using a peer-to-peer network. The network timestamps transactions by hashing them into an ongoing chain of hash-based proof-of-work, forming a record that cannot be changed without redoing the proof-of-work. The longest chain not only serves as proof of the sequence of events witnessed, but proof that it came from the largest pool of CPU power. As long as a majority of CPU power is controlled by nodes that are not cooperating to attack the network, they'll generate the longest chain and outpace attackers. The network itself requires minimal structure. Messages are broadcast on a best effort basis, and nodes can leave and rejoin the network at will, accepting the longest proof-of-work chain as proof of what happened while they were gone.},
+archivePrefix = {arXiv},
+arxivId = {43543534534v343453},
+author = {Nakamoto, Satoshi},
+doi = {10.1007/s10838-008-9062-0},
+eprint = {43543534534v343453},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/bitcoin.pdf:pdf},
+isbn = {978-972-757-716-3},
+issn = {09254560},
+journal = {Www.Bitcoin.Org},
+pages = {9},
+pmid = {14533183},
+title = {{Bitcoin: A Peer-to-Peer Electronic Cash System}},
+url = {https://bitcoin.org/bitcoin.pdf},
+year = {2008}
+}
+
+
+@article{Lambert2000,
+abstract = {To compete in the present milieu which has undergone dramatic changes in the last decade, firms are constantly revising strategies, methods, and tactics to better manage operations. The need within the industry is to be able to take advantage of emerging opportunities and react rapidly to altered conditions - in other words, to be agile - has been highlighted as an imperative for firms in this highly turbulent global environment. The present-day business environment dictates that not only manufacturing processes, but also supply chain practices must evolve dynamically. There is no consensus in the literature on what constitutes an agile supply chain or how to achieve it. In this study, we review literature, develop a framework for organising the existing research, and identify issues for further research.},
+author = {Lambert, D},
+doi = {10.1016/S0019-8501(99)00113-3},
+issn = {00198501},
+journal = {Industrial Marketing Management},
+pages = {65--83},
+title = {{Issues in Supply Chain Management}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0019850199001133},
+volume = {29},
+year = {2000}
+}
+
+@inproceedings{Hackius2017,
+abstract = {Blockchain is an emergent technology concept that enables the decentralized and im-mutable storage of verified data. Over the last few years, it has increasingly attracted the attention of different industries. Especially in Fintech, Blockchain is hyped as the silver bullet that might overthrow today's payment handling. Slowly, the logistics and supply chain man-agement community realizes how profoundly Blockchain could affect their industry. To shed light on this emerging field, we conducted an online survey and asked logistics professionals for their opinion on use case exemplars, barriers, facilitators, and the general prospects of Blockchain in logistics and supply chain management. We found most of our participants are fairly positive about this new technology and the benefits it offers. However, factors like the hierarchical level, Blockchain experiences, and the industry sector have a significant impact on the participants' evaluation. We reason that the benefits over existing IT solutions must be carved out more carefully and use cases must be further explored to get a rather conservative industry, like logistics, more excited about Blockchain.},
+author = {Hackius, Niels and Petersen, Moritz},
+booktitle = {Digitalization in Supply Chain Management and Logistics: Proceedings of Hamburg International Conference of Logistics},
+pages = {3--18},
+title = {{Blockchain in Logistics and Supply Chain: Trick or Treat?}},
+year = {2017}
+}
+
+@article{Korpela2017,
+abstract = {Digital supply chain integration is becoming increasingly dynamic. Access to customer demand needs to be shared effectively, and product and service deliveries must be tracked to provide visibility in the supply chain. Business process integration is based on standards and reference architectures, which should offer end-to-end integration of product data. Companies operating in supply chains establish process and data integration through the specialized intermediate companies, whose role is to establish interoperability by mapping and integrating company-specific data for various organizations and systems. This has typically caused high integration costs, and diffusion is slow. This paper investigates the requirements and functionalities of supply chain integration. Cloud integration can be expected to offer a cost-effective business model for interoperable digital supply chains. We explain how supply chain integration through the blockchain technology can achieve disruptive transformation in digital supply chains and networks.},
+author = {Korpela, Kari and Hallikas, Jukka and Dahlberg, Tomi},
+doi = {10.24251/HICSS.2017.506},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Read/paper0517.pdf:pdf},
+isbn = {9780998133102},
+pages = {4182--4191},
+title = {{Digital Supply Chain Transformation toward Blockchain Integration}},
+url = {http://hdl.handle.net/10125/41666},
+year = {2017}
+}
+
+@article{Saveen2016,
+abstract = {— The blockchain technology as a foundation for distributed ledgers offers an innovative platform for a new decentralized and transparent transaction mechanism in industries and businesses. The inherited characteristics of this technology enhance trust through transparency and traceability within any transaction of data, goods, and financial resources. Despite initial doubts about this technology, recently governments and large corporations have investigated to adopt and improve this technology in various domains of applications, from finance, social and legal industries to design, manufacturing and supply chain networks. In this article, the authors review the current status of this technology and some of its applications. The potential benefit of such technology in manufacturing supply chain is then discussed in this article and a vision for the future blockchain ready manufacturing supply chain is proposed. Manufacturing of cardboard boxes are used as an example to demonstrate how such technology can be used in a global supply chain network. Finally, the requirements and challenges to adopt this technology in the future manufacturing systems are discussed.},
+author = {Abeyratne, Saveen A., and Radmehr P. Monfared},
+doi = {10.15623/ijret.2016.0509001},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Monfared-BCReady{\_}Sept{\_}16{\_}Lboro.pdf:pdf;:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/. - 2016 - Blockchain Ready Manufacturing Supply Chain Using Distributed Ledger.pdf:pdf},
+issn = {23217308},
+journal = {International Journal of Research in Engineering and Technology},
+keywords = {blockchain,digital currency and,distributed ledger,manufacturing supply chain,traceability},
+mendeley-groups = {Articles},
+number = {09},
+pages = {1--10},
+title = {{Blockchain Ready Manufacturing Supply Chain Using Distributed Ledger}},
+url = {http://esatjournals.net/ijret/2016v05/i09/IJRET20160509001.pdf},
+volume = {05},
+year = {2016}
+}
+
+@article{Wilding1998,
+abstract = {Since the late 1950s it has been recognized that the systems used internally within supply chains can lead to oscillations in demand and inventory as orders pass through the system. The uncertainty generated by these oscillations can result in late deliveries, order cancellations and an increased reliance on inventory to buffer these effects. Despite the best efforts of organizations to stabilize the dynamics generated, industry still experiences a high degree of uncertainty from this source. The supply chain complexity triangle describes the interaction of deterministic chaos, parallel interactions and demand amplification. It provides a framework for understanding the generation of uncertainty within supply chains. The implications for supply chain strategy and manufacturing logistics are discussed.},
+author = {Wilding, Richard},
+doi = {10.1108/09600039810247524},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/supply chain complexity.pdf:pdf},
+isbn = {0960-0035},
+issn = {0960-0035},
+journal = {International Journal of Physical Distribution {\&} Logistics Management},
+number = {8},
+pages = {599--616},
+pmid = {7754995},
+title = {{The supply chain complexity triangle: Uncertainty generation in the supply chain}},
+url = {http://www.emeraldinsight.com/doi/10.1108/09600039810247524},
+volume = {28},
+year = {1998}
+}
+@article{Isik2011,
+author = {Isik, Filiz},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Complexity in Supply Chains - A New Approach to Quantitative Measurement of the.pdf:pdf},
+isbn = {978-953-307-184-8},
+journal = {Supply Chain Management},
+pages = {417----432},
+title = {{Complexity in Supply Chains : A New Approach to Quantitative Measurement of the Supply-Chain-Complexity}},
+year = {2011}
+}
+
+@article{Lummus2014,
+abstract = {Interest in supply chain management has steadily increased since the 1980s when firms saw the benefits of collaborative relationships within and beyond their own organization. Firms are finding that they can no longer compete effectively in isolation of their suppliers or other entities in the supply chain. A number of definitions of supply chain management have been proposed in the literature and in practice. This paper defines the concept of supply chain management and discusses its historical evolution. The term does not replace supplier partnerships, nor is it a description of the logistics function. The competitive importance of linking a firm's supply chain strategy to its overall business strategy and some practical guidelines are offered for successful supply chain management.},
+author = {Lummus, Rhonda R and Vokurka, Robert J},
+doi = {10.1108/02635579910243851},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Defining supply chain management - a historical perspective and pratical guidelines.pdf:pdf},
+isbn = {0957409931},
+issn = {10983015},
+journal = {Industrial Management {\&} Data Systems},
+keywords = {competitiveness,content indicators,data systems,industrial management,operations,originality,practice implications,readability,research implications,strategy,supply-chain management,volume 99 number 1},
+number = {1},
+pages = {11 -- 17},
+pmid = {234918441},
+title = {{Defining supply chain management: a historical perspective and practical guidelines}},
+volume = {99},
+year = {2014}
+}
+
+@book{Habib2011,
+author = {Habib, Mamun},
+year = {2011},
+month = {09},
+pages = {},
+title = {Supply Chain Management (SCM): Theory and Evolution},
+isbn = {978-953-307-250-0}
+}
+
+@article{Ballou2007,
+abstract = {This article will be divided into three sections: past, present, and future. The past section will trace major events that created business logistics as it is practiced today. In particular, do the events portend the future of business logistics and supply chain management? The present section will attempt to summarize the state of business logistics. How business logistics relates to supply chain management will be addressed. The future section will make some predictions as to the issues that need to be addressed and the events that will likely take place in the near term.},
+archivePrefix = {arXiv},
+arxivId = {http://dx.doi.org/10.1108/BIJ-10-2012-0068},
+author = {Ballou, Ronald H.},
+doi = {10.1108/09555340710760152},
+eprint = {/dx.doi.org/10.1108/BIJ-10-2012-0068},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/The evolution and future of logistics and supply chain management.pdf:pdf},
+isbn = {0955-534X},
+issn = {0955-534X},
+journal = {European Business Review},
+number = {4},
+pages = {332--348},
+pmid = {42012058},
+primaryClass = {http:},
+title = {{The evolution and future of logistics and supply chain management}},
+url = {http://www.emeraldinsight.com/doi/10.1108/09555340710760152},
+volume = {19},
+year = {2007}
+}
+
+@article{Punter2013,
+abstract = {A study of the nature, causes and complexity of supply chain disruptions},
+author = {Punter, Alan},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/supply{\_}chain{\_}failures{\_}2013{\_}final{\_}web.pdf:pdf},
+journal = {Airmic Technical},
+pages = {1--52},
+title = {{Supply Chain Failures - A study of the nature, causes and complexity of supply chain disruptions}},
+year = {2013}
+}
+
+@misc{Ganeshan1995,
+author = {Ganeshan, Ram and Harrison, Terry P},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/An Introduction to Supply Chain Management.pdf:pdf},
+title = {{An introduction to supply chain management.pdf}},
+year = {1995}
+}
+
+@article{Pilkington2015,
+abstract = {This paper expounds the main principles behind blockchain technology and some of its cutting-edge applications. Firstly, we present the core concepts at the heart of the blockchain, and we discuss the potential risks and drawbacks of public distributed ledgers, and the shift toward hybrid solutions. Secondly, we expose the main features of decentralized public ledger platforms. Thirdly, we show why the blockchain is a disruptive and foundational technology, and fourthly, we sketch out a list of important applications, bearing in mind the most recent evolutions.},
+author = {Pilkington, Marc},
+doi = {10.4337/9781784717766.00019},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/SSRN-id2662660.pdf:pdf},
+isbn = {978 1 78471 775 9},
+issn = {1553-877X},
+journal = {Research Handbook on Digital Transformations},
+keywords = {Blockchain technology,applications,private ledgers,public ledgers},
+pages = {1--39},
+title = {{Blockchain Technology: Principles and Applications}},
+url = {http://papers.ssrn.com/abstract=2662660},
+year = {2015}
+}
+
+@article{Buterin2014,
+abstract = {Satoshi Nakamoto's development of Bitcoin in 2009 has often been hailed as a radical development in money and currency, being the first example of a digital asset which simultaneously has no backing or "intrinsic value" and no centralized issuer or controller. However, another, arguably more important, part of the Bitcoin experiment is the underlying blockchain technology as a tool of distributed consensus, and attention is rapidly starting to shift to this other aspect of Bitcoin. Commonly cited alternative applications of blockchain technology include using on-blockchain digital assets to represent custom currencies and financial instruments ("colored coins"), the ownership of an underlying physical device ("smart property"), non-fungible assets such as domain names ("Namecoin"), as well as more complex applications involving having digital assets being directly controlled by a piece of code implementing arbitrary rules ("smart contracts") or even blockchain-based "decentralized autonomous organizations" (DAOs). What Ethereum intends to provide is a blockchain with a built-in fully fledged Turing-complete programming language that can be used to create "contracts" that can be used to encode arbitrary state transition functions, allowing users to create any of the systems described above, as well as many others that we have not yet imagined, simply by writing up the logic in a few lines of code.},
+author = {Buterin, Vitalik},
+doi = {10.5663/aps.v1i1.10138},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Ethereum{\_}white{\_}paper-a{\_}next{\_}generation{\_}smart{\_}contract{\_}and{\_}decentralized{\_}application{\_}platform-vitalik-buterin.pdf:pdf},
+isbn = {9780101808422},
+issn = {19233299},
+journal = {Etherum},
+number = {January},
+pages = {1--36},
+pmid = {21382811},
+title = {{A next-generation smart contract and decentralized application platform}},
+url = {http://buyxpr.com/build/pdfs/EthereumWhitePaper.pdf},
+year = {2014}
+}
+
+@article{byzantine-generals-problem,
+author = {Lamport, Leslie and Shostak, Robert and Pease, Marshall},
+title = {The Byzantine Generals Problem},
+booktitle = {},
+year = {1982},
+month = {July},
+abstract = {I have long felt that, because it was posed as a cute problem about philosophers seated around a table, Dijkstra's dining philosopher's problem received much more attention than it deserves. (For example, it has probably received more attention in the theory community than the readers/writers problem, which illustrates the same principles and has much more practical importance.) I believed that the problem introduced in [41] was very important and deserved the attention of computer scientists. The popularity of the dining philosophers problem taught me that the best way to attract attention to a problem is to present it in terms of a story.
+
+There is a problem in distributed computing that is sometimes called the Chinese Generals Problem, in which two generals have to come to a common agreement on whether to attack or retreat, but can communicate only by sending messengers who might never arrive. I stole the idea of the generals and posed the problem in terms of a group of generals, some of whom may be traitors, who have to reach a common decision. I wanted to assign the generals a nationality that would not offend any readers. At the time, Albania was a completely closed society, and I felt it unlikely that there would be any Albanians around to object, so the original title of this paper was The Albanian Generals Problem. Jack Goldberg was smart enough to realize that there were Albanians in the world outside Albania, and Albania might not always be a black hole, so he suggested that I find another name. The obviously more appropriate Byzantine generals then occurred to me.
+
+The main reason for writing this paper was to assign the new name to the problem. But a new paper needed new results as well. I came up with a simpler way to describe the general 3n+1-processor algorithm. (Shostak's 4-processor algorithm was subtle but easy to understand; Pease's generalization was a remarkable tour de force.) We also added a generalization to networks that were not completely connected. (I don't remember whose work that was.) I also added some discussion of practical implementation details.},
+publisher = {},
+url = {https://www.microsoft.com/en-us/research/publication/byzantine-generals-problem/},
+address = {},
+pages = {382-401},
+journal = {ACM Transactions on Programming Languages and Systems},
+volume = {4/3},
+chapter = {},
+isbn = {},
+}
+
+@Article{Haber1991,
+author="Haber, Stuart
+and Stornetta, W. Scott",
+title="How to time-stamp a digital document",
+journal="Journal of Cryptology",
+year="1991",
+month="Jan",
+day="01",
+volume="3",
+number="2",
+pages="99--111",
+abstract="The prospect of a world in which all text, audio, picture, and video documents are in digital form on easily modifiable media raises the issue of how to certify when a document was created or last changed. The problem is to time-stamp the data, not the medium. We propose computationally practical procedures for digital time-stamping of such documents so that it is infeasible for a user either to back-date or to forward-date his document, even with the collusion of a time-stamping service. Our procedures maintain complete privacy of the documents themselves, and require no record-keeping by the time-stamping service.",
+issn="1432-1378",
+doi="10.1007/BF00196791",
+url="https://doi.org/10.1007/BF00196791"
+}
+
+@article{szabo1996smart,
+author = {Szabo, Nick},
+journal = {URL: http://www.fon.hum.uva.nl/rob/Courses/InformationInSpeech/CDROM/Literature/LOTwinterschool2006/szabo.best.vwh.net/smart{\_}contracts{\_}2.html},
+mendeley-groups = {Ethereum},
+title = {{Smart contracts: building blocks for digital markets}},
+year = {1996}
+}
+
+@article{Buterin2017,
+abstract = {We introduce Casper, a proof of stake-based finality system which overlays an existing proof of work blockchain. Casper is a partial consensus mechanism combining proof of stake algorithm research and Byzantine fault tolerant consensus theory. We introduce our system, prove some desirable features, and show defenses against long range revisions and catastrophic crashes. The Casper overlay provides almost any proof of work chain with additional protections against block reversions.},
+archivePrefix = {arXiv},
+arxivId = {1710.09437},
+author = {Buterin, Vitalik and Griffith, Virgil},
+eprint = {1710.09437},
+file = {:C$\backslash$:/Users/PedroCosta/Downloads/casper{\_}basics.pdf:pdf},
+mendeley-groups = {Ethereum},
+pages = {1--10},
+title = {{Casper the Friendly Finality Gadget}},
+url = {http://arxiv.org/abs/1710.09437},
+year = {2017}
+}
+
+@article{Buterin2013,
+author = {Buterin, Vitalik},
+howpublished = {URL: https://bitcoinmagazine.com/articles/what-proof-of-stake-is-and-why-it-matters-1377531463/},
+mendeley-groups = {Ethereum},
+title = {{What Proof of Stake Is And Why It Matters}},
+month = "August"
+year = {2013}
+}
+
+@article{Pongnumkul2017,
+abstract = {This paper conducts a performance analysis of two popular private blockchain platforms, Hyperledger Fabric and Ethereum (private deployment), to assess the performance and limitations of these state-of-the-art platforms. Blockchain, a decentralized transaction and data management technology, is said to be the technology that will have similar impacts as the Internet had on people's lives. Many industries have become interested in adopting blockchain in their IT systems, but scala- bility is an often-cited concern of current blockchain technology. Therefore, the goals of this preliminary performance analysis are twofold. First, a methodology for evaluating a blockchain platform is developed. Second, the analysis results are presented to inform practitioners in making decisions regarding adoption of blockchain technology in their IT systems. The experimental results, based on varying number of transactions, show that Hyperledger Fabric consistently outperforms Ethereum across all evaluation metrics which are execution time, latency and throughput. Additionally, both platforms are still not competitive with current database systems in term of performances in high workload scenarios. I.},
+author = {Pongnumkul, Suporn and Siripanpornchana, Chaiyaphum and Thajchayapong, Suttipong},
+doi = {10.1109/ICCCN.2017.8038517},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Performance Analysis of Private Blockchain Platforms in Varying Workloads.pdf:pdf},
+isbn = {9781509029914},
+journal = {2017 26th International Conference on Computer Communications and Networks, ICCCN 2017},
+keywords = {Performance Analysis of Private Blockchain Platforms in Varying Workloads},
+mendeley-groups = {Ethereum},
+title = {{Performance analysis of private blockchain platforms in varying workloads}},
+year = {2017}
+}
+
+@article{Scherer2017,
+abstract = {The blockchain technology started as the innovation that powered the cryptocurrency Bitcoin. But in recent years, leaders in finance, banking, and many more companies has given this new innovation more attention than ever before. They seek a new technology to replace their system which are often inefficient and costly to operate. However, one of the reasons why it not possible to use a blockchain right away is because of the poor performance. Public blockchains, where anyone can partici-pate, can only process a couple of transaction per second and is therefore far from usable in the world of finance. Permissioned blockchains is an-other type of blockchain where only a restricted set of users have the rights to decide what will be recorded in the blockchain. This allows permissioned blockchains to have a number of advantages over public blockchains. Most notably is the ability to split the network into seg-ments where only a subset of nodes needs to validate transactions to a particular application, allowing the use of parallel computing and better scaling. Moreover, the validating nodes can be trusted, allowing the use of consensus algorithm which offer much more throughput. In this paper, we compare public blockchain with permissioned blockchain and address the notable trade-offs: decentralization, scalability and se-curity, in the different blockchain networks. Furthermore, we examine the potential of using a permissioned blockchain to replace the old sys-tems used in financial institutes and banks by launching a Hyperledger Fabric network and run stress tests.},
+author = {Scherer, Mattias and Eriksson, Jerry},
+doi = {UMEA University},
+file = {:D$\backslash$:/OneDrive - fe.up.pt/Documents/MIEIC/5o Ano/Thesis/Articles/Unread/Performance and Scalability of Blockchain Networks and Smart Contracts.pdf:pdf},
+mendeley-groups = {Ethereum},
+title = {{Performance and Scalability of Blockchain Networks and Smart Contracts}},
+year = {2017}
+}
