Update on Overleaf.

--- a/introduction.tex
+++ b/introduction.tex
@@ -23,11 +23,13 @@ Lorem ipsum \cite{ferreira_patterns_2008}.
 
 \section{Evolution of blockchain technologies and the complexity of Supply Chains} \label{sec:context}
 
-Blockchain is a technology that allows for secure, public, distributed and decentralized systems. Though it was first proposed in its actual form by Satoshi Nakamoto \cite{Nakamoto2008}, an anonymous group which published a white paper in 2008, this was not the first reference to such a technology. The first work on a cryptographically secured chain of blocks was described in 1991 by Stuart Haber and W. Scott Stornetta \cite{Haber1991}, and further refined in 1992 by Bayer \& Haber, by incorporating Merkle trees \cite{Bayer1992}. Since then, it has come a long way, sprouting multiple different uses and applications of the technology. Its characteristics make the development of distributed and permanently, globally available systems possible, which is a paradigm that is attracting the interest of various industries.
+\todo{fcorreia: This section name is a bit long. How about we shorten it a bit? E.g., "From Blockchain technologies to Supply Chains"}
 
-One area in particular where we believe blockchain could bring about great improvements is Supply Chain Management (SCM). SCM has seen an increase in complexity in the last few decades, due to the increase in the globalization of the market, with businesses interlacing in many different ways, their relations extending way beyond what they used to, as seen in an article published by Filiz Isik in 2011 \cite{Isik2011}.  This increase in complexity is somewhat hard to manage and some supply chains stretch and encompass so many businesses that the software used to manage it ends up not being able to transmit all the information from end to end, leaving holes of information in between the links that join each business, thus leading to a lot of chaos and uncertainty as to the state of the key items in the chain \cite{Wilding1998}. 
-   
-   This dissertation work will focus on supply chain management, and on how blockchain can possibly be applied to improve this area, leading to positive impacts in the logistics industry and eventually finding benefits for the consumer as well. 
+Blockchain is a technology that allows for secure, public, distributed and decentralized systems \todo{fcorreia: I wouldn't say that it is *a* technology}. Though it was first proposed in its actual form by Satoshi Nakamoto \cite{Nakamoto2008}, an anonymous group which published a white paper in 2008, this was not the first reference to such a technology. The first work on a cryptographically secured chain of blocks was described in 1991 by Stuart Haber and W. Scott Stornetta \cite{Haber1991}, and further refined in 1992 by Bayer \& Haber, by incorporating Merkle trees \cite{Bayer1992}. Since then, it has come a long way, sprouting multiple different uses and applications of the technology. Its characteristics make the development of distributed and permanently, globally available systems possible, which is a paradigm that is attracting the interest of various industries.
+
+One area in particular where we believe blockchain could bring about great improvements is Supply Chain Management (SCM). SCM has seen an increase in complexity in the last few decades, due to the increase in the globalization of the market\todo{I'd remove the second "increase" to avoid the repetition.}, with businesses interlacing in many different ways, their relations extending way beyond what they used to, as seen in an article published by Filiz Isik in 2011 \cite{Isik2011} \todo{It's good form to avoid referring directly to articles and try to refer to the work instead, even if it just happens to be described in that one article. This could be rephrased, for example, to: "their relations extending way beyond what they used to, as found by Filiz Isik \cite{Isik2011}".}. This increase in complexity is somewhat hard to manage and some supply chains stretch and encompass so many businesses that the software used to manage it ends up not being able to transmit all the information from end to end, leaving holes of information in between the links that join each business, thus leading to a lot of chaos and uncertainty as to the state of the key items in the chain \cite{Wilding1998}. \todo{fcorreia: This could be more accurate; the software may be unable to handle it, but the reason is just that it wasn't developed to adequately integrate with upstream and downstream systems. Current SCM software architectures may be inadequate but I wouldn't say that the reason is an increase in complexity of the supply chains. I think this idea is clearer in section 1.2, but it's not the one I get from these paragraphs.}
+
+   This dissertation work will focus on supply chain management, and on how blockchains can possibly be applied to improve this area, leading to positive impacts in the logistics industry and eventually finding benefits for the consumer as well. 
 
 %Esta secção descreve a área em que o trabalho se insere, podendo
 %referir um eventual projeto de que faz parte e apresentar uma breve
@@ -47,6 +49,8 @@ As described in section 1.3, these problems are caused by the use of software th
 \label{sec:objectives}
 The main objective of this dissertation is to find whether blockchain technology can really solve the most common problems of supply chain management, and which ones would it help out the most with. There are a multitude of small tasks that blockchain could automatize in supply chain, so this thesis will try to figure out which ones blockchain applies to better. 
 
+\todo{fcorreia: "which ones". Do you mean which blockchain frameworks, models, principles?}
+
 Certain designs are going to be proposed, with focus on different issues and giving solutions to different archetypes of supply chains and integration models. As a secondary objective, we are going to find which design better fits in order to build a generalist solution to our problem and also what are the requirements for blockchain to be applied in this sense.
 
 \section{Dissertation Structure} \label{sec:struct}
@@ -61,3 +65,5 @@ No capítulo~\ref{chap:chap4} praesent sit amet sem.
 No capítulo~\ref{chap:concl}  posuere, ante non tristique
 consectetuer, dui elit scelerisque augue, eu vehicula nibh nisi ac
 est. 
+
+\todo{fcorreia: translate and complete}
