--- a/supplychainproblems.tex
+++ b/supplychainproblems.tex
@@ -7,26 +7,40 @@
 This chapter will be explaining the concepts of supply chain and the challenges that the area of SCM is currently facing.
 
 \section{Concepts}
-\textbf{Supply Chain} can be found, in some form, in nearly every business, spanning many different areas of operation. Traditionally, a supply chain encompasses all the processes and activities that lead from the initial raw materials to the final finished product, as well as all the functions and services within and outside a company. A supply chain can also be defined as the network of entities through which material flows. These entities can be identified as suppliers, carriers, manufacturing sites, distribution centers, retailers, and customers \cite{Lummus2014}. Naturally, with the upstream and downstream flow of these materials and resources, comes a lot of information on them and on the processes, people and organizations they are associated with. Realistically, the  flow is not always arborescent, as there are many considerations to be taken and decisions to be made. Supply chains have multiple end products with shared components, facilities and capacities \cite{Ganeshan1995}. As a consequence, the paths taken by the resources and information are not straightforward, but interlace, diverge and converge at different points, go back and forth.
+\textbf{Supply Chains} can be found, in some form, in nearly every business, spanning many different areas of operation. Traditionally, a supply chain encompasses all the processes and activities that lead from the initial raw materials to the final finished product, as well as all the functions and services within and outside a company. A supply chain can also be defined as the network of entities through which material flows. These entities can be identified as suppliers, carriers, manufacturing sites, distribution centers, retailers, and customers \cite{Lummus2014}. Naturally, with the upstream and downstream flow of these materials and resources, comes a lot of information on them and on the processes, people and organizations they are associated with. Realistically, the  flow is not always arborescent, as there are many considerations to be taken and decisions to be made. Supply chains have multiple end products with shared components, facilities and capacities \cite{Ganeshan1995}. As a consequence, the paths taken by the resources and information are not straightforward, but interlace, diverge and converge at different points, go back and forth.
+  
+\todo{fcorreia: Here would be a nice place to place a picture depicting what you describe in the previous paragraph.}  
   
   The activities and processes a supply chain encompasses include: sourcing raw materials and parts, manufacturing and assembly, warehousing and inventory tracking, order entry and order management, distribution across all channels, delivery to the customer, and managing the information systems necessary to monitor all of these activities. These activities can be roughly mapped to the 4 essential processes "plan,~ source, make, deliver". \cite{Lummus2014}
   
-  Coordinating all of these is no easy task, and so the discipline of SCM comes into life. According to Ballou \cite{Ballou2007}, the Council of SCM Professionals (CSCMP) defines it as following: \textit{“SCM encompasses the planning and management of all activities involved in sourcing and procurement, conversion, and all Logistics Management activities. Importantly, it also includes coordination and collaboration with channel partners, which can be suppliers, intermediaries, third-party service providers, and customers. In essence, SCM integrates supply and demand management within and across companies”} .
+\todo{fcorreia: why the quotation marks here?}
+  
+  Coordinating all of these is no easy task, and so the discipline of SCM comes into life. According to Ballou \cite{Ballou2007}, the Council of SCM Professionals (CSCMP) defines it as following: \textit{“SCM encompasses the planning and management of all activities involved in sourcing and procurement, conversion, and all Logistics Management activities. Importantly, it also includes coordination and collaboration with channel partners, which can be suppliers, intermediaries, third-party service providers, and customers. In essence, SCM integrates supply and demand management within and across companies”}.
+  
+\todo{fcorreia: sound better if you rephrase it to "defines it as *the* following: \emph{SCM encompasses the planning}" or just "defines it as \emph{the planning ...}"}
 
 From this definition follows that SCM deals a lot with both coordination and collaboration between entities, and so, the management of the flow of information and resources between them is very important. The objective is always, of course, to minimize the total cost of these flows between and among stages \cite{Habib2011}.
 In the end, the real value is created from these relationships in the supply chain and not from the work of a single entity. As such, supply chains, not firms, compete and those which have the best integration and management processes win.
+
+\todo{fcorreia: the \emph{real value}™ for whom?}
  
 And this is where SCM shines and shows just how useful it can be. Managing all the processes in a supply chain, while maintaining safety, quality and keeping to schedule is difficult. An event on one side of the world, large or small, be it from human or natural causes, can easily disrupt the links in the supply chain. For instance, it might disrupt the supply of a critical component or service. Delays are, therefore, common, and the consequences of such disruptions might have a severe impact in the finances, growth and reputation of the companies involved \cite{Punter2013}.
 
 SCM diminishes the impact of such disruptions, and actively works to avoid them altogether, while optimizing the way the supply chain works. This is why SCM is such an important discipline, that we have to better understand and improve, with all the means that we can, and this includes, of course, new technologies like the blockchain.
 
+\todo{fcorreia: I wouldn't call them "new", to avoid hurting susceptibilities :-)}
+
 \section{Challenges}
 
  Having already introduced the concepts of Supply Chain and SCM, it is now possible to briefly introduce some of the problems that affect them.
-    
-    In section 1.2, we already pointed out how some events can cause delays, which then affect companies negatively. This is the most general and easiest to point out problem in supply chain management. Such events are not always predictable and must be contained as fast as possible, or even prevented.  For instance, often, the delays are caused by synchronization problems in the information systems of a company.
+
+\todo{fcorreia: each of the following paragraphs introduce challenges. WDYT about marking the name of the challenge in bold in each paragraph? By doing this we may find that some of these challenges are not described in a way that is concrete enough.}
+
+    In section 1.2, we already pointed out how some events can cause delays, which then affect companies negatively \todo{fcorreia: avoid referring to sections with hardcoded numbers, use \textbackslash~ref instead }. This is the most general and easiest to point out problem in supply chain management \todo{fcorreia: this sentence needs rewriting}. Such events are not always predictable and must be contained as fast as possible, or even prevented \todo{fcorreia: I'd avoid the "or even" here, as preventing them is the preferable option :-)}. For instance, often, the delays are caused by synchronization problems in the information systems of a company.
     
     Another problem is that, often, there are difficulties in sharing information between companies. This is caused both by the fact that companies value their privacy, which means they might not want to share too much information, or that they might only share it through secure channels, and by the lack of standards for sending information and communicating. The issue with non-existing standards is that companies are left to discuss what details to share or not, wasting time and resources.
+    
+\todo{fcorreia: do you have a reference about the lack of standards?}
 
 Most important of all, in the industry, the use of traditional tools is still too prevalent. Emails are sent, documents are printed and mailed, instead of transmitting the information in a more automatic, direct and secure way through the network. This point also brings the next problem of supply chains to light: the apparent lack of interoperability between certain softwares (which might be a byproduct of by the lack of standards).
  
