--- a/thesis.tex
+++ b/thesis.tex
@@ -31,6 +31,10 @@
 \usepackage{calligra}
 \newcommand{\setfont}[2]{{\fontfamily{#1}\selectfont #2}}
 
+\usepackage[]{todonotes}
+\presetkeys%
+    {todonotes}%
+    {inline,backgroundcolor=yellow}{}
 
 \makeindex
 
