Update on Overleaf.

--- a/supplychainproblems.tex
+++ b/supplychainproblems.tex
@@ -48,4 +48,8 @@ Most important of all, in the industry, the use of traditional tools is still to
  
 Finally, provenance and traceability of the products on a supply chain are a big objective for companies, but the current technologies used in supply chain only accomplish it in a limited scope, as the information a certain entity possesses is usually also limited. And so, it is very hard for anyone to have a global overview of the supply chain.
 
-In conclusion, most of these issues in supply chain are caused by the standalone use of outdated or inadequate software architectures, which, traditionally, are often centralized and have single points of failure. A supply chain should be as efficient and effective as possible, while being secure, but the traditional technologies used to manage them are proving not to be enough by themselves to satisfy these requirements.
+In conclusion, most of these issues in supply chain are caused by the standalone use of outdated or inadequate software architectures, which, traditionally, are often centralized and have single points of failure \todo{fcorreia: this is presented as a conclusion, but it's not referred before in the chapter.}. A supply chain should be as efficient and effective as possible, while being secure, but the traditional technologies used to manage them are proving not to be enough by themselves to satisfy these requirements.
+
+\todo{fcorreia: the technologies/techniques/approaches that make a blockchain are not new, I think you could even call them "traditional". They become more interesting when put together though.}
+
+\todo{fcorreia: the last sentence of the above paragraph seems like a bit of a stretch. I think we can imagine alternative ways to do all of this without a blockchain. I don't think we want to compare blockchains with existing technologies, we want to see if blockchains *are* a good choice to implement supply chains management software that fits well with today's requirements (even if there may be other ways of achieving the same -- i.e., without a blockchain). WDYT?}
