Update on Overleaf.

--- a/blockchainframeworks.tex
+++ b/blockchainframeworks.tex
@@ -104,3 +104,7 @@ Maybe this subsection is already what is described in the sections that follow, 
 - Talk about Eth possible applicability, because of the fact it might be expensive;
 
 \section{Hyperledger}
+
+\section{Corda}
+
+\section{Comparison}
