Update on Overleaf.

--- a/blockchain.tex
+++ b/blockchain.tex
@@ -9,7 +9,7 @@ This chapter introduces the most important concepts of blockchain which are esse
    “The Byzantine Generals' Problem” is a classical problem faced by distributed systems, which, in simple terms, states that consistency in a distributed system can never be fully guaranteed \cite{byzantine-generals-problem}. This is derived from a lack of general consensus as to what the state of the system is at any given time.
    Nakamoto's implementation of a blockchain seems to be, at present, the most practical way to face and solve \todo{fcorreia: WDYT of "approach" instead of "face and solve"? (in this case it wouldn't be as needed to mention the limitations just yet)} this problem (though with its limitations), even earning the term "Practical Byzantine Fault Tolerance Algorithm", because of how it handles the consensus issue. The fact that many kinds of applications rely on distributed architectures, which might face these problems, turns blockchain all the more interesting and appealing \todo{fcorreia: I'd go with only one of the adjectives instead of both :-)}. 
    
-   Some improvements have been built upon the traditional blockchain, such as smart contracts, which further enhance its use and allow for a wider variety of applications. Some areas where blockchain is starting to see some use include insurance, finance, internet-of-things, healthcare, identity management, to name a few. 
+   Some improvements have been built upon the traditional blockchain, such as smart contracts, which further enhance its use and allow for a wider variety of applications. Some areas where blockchain is starting to see some use include insurance, finance, Internet-of-Things, health care, identity management, to name a few. 
    In each of these areas, there are many ways in which blockchain can be used, be it to store information, process information, process payments or provide services. The versatility and popularity of this technology allows for the possibility of many other applications to be proposed \todo{fcorreia: I would say the popularity may be a consequence of the merits of blockchains, and not so much a good reason for its applicability.}.
 
 \section{Core Concepts and Features}
@@ -65,7 +65,7 @@ In a blockchain, security is a multi-faceted aspect. It depends heavily on crypt
     
 \todo{fcorreia: "cryptoeconomics" refers just to the incentives given to the miners? I haven't found the term especially useful to understand the paragraph}
     
-    \paragraph{Private Blockchains} These are usually owned by some organization and have access control, restricting write access to certain peers inside the organization. Read access might be restricted or not, according to the organization's goals. These blockchains, unlike public ones, might not require cryptocurrency or incentives, as the maintenance of the blockchain is done by the organization who owns it, and so they have all the interest in having nodes that can run the consensus process. In the end, this is a more centralized version of the blockchain, as the nodes are concentrated under the ownership of the organization. This also gives the advantage that alterations to the blockchain are easier to achieve, if so is desired (though it subtracts from the actual meaning and concept of an immutable blockchain).
+    \paragraph{Private Blockchains} These are usually owned by some organization and have access control, restricting write access to certain peers inside the organization. Read access might be restricted or not, according to the organization's goals. These blockchains, unlike public ones, might not require cryptocurrency or incentives, as the maintenance of the blockchain is done by the organization who owns it, and so they have all the interest in having nodes that can run the consensus process. In the end, this is a more centralized version of the blockchain, as the nodes are concentrated under the ownership of the organization. This also gives the advantage that alterations to the blockchain are easier to achieve, if so is desired (though it subtracts from the actual meaning and concept of an immutable blockchain). It is usually more efficient than public blockchains, being able of achieving a higher number of transactions processed per second.
     
     \paragraph{Consortium blockchains} They are a kind of hybrid blockchain, though closer to a private blockchain. They are controlled by many different organizations, and the consensus process is handled by pre-selected nodes from the organizations. This consensus might involve, for example, at least a certain percentage of the nodes agreeing on something (e.g.: if there are 15 fixed nodes, require at least 10 to sign the block). The permissions to read might be public or otherwise permissioned, and as such, this can also be considered a partially decentralized blockchain.
 
